[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.12.6"
prost-types = "0.12.6"
serde = "1.0.203"
serde_yaml = "0.9.34"
sqlx = "0.7.4"
tonic = { version = "0.11.0", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.11.0"
